#1855 Minor formatting changes.